# ai-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_api_keys_key_id.py
docs/: README.md
src/ai_gateway/: __init__.py  cli.py  main.py  metrics.py  settings.py
src/ai_gateway/api/: __init__.py  dashboard.py  v1.py  v1_chat.py  v1_jobs.py  v1_models.py  v1_responses.py  well_known.py
src/ai_gateway/auth/: __init__.py  apikey.py
src/ai_gateway/data/: pricing.json
src/ai_gateway/db/: __init__.py  models.py
src/ai_gateway/infrastructure/: __init__.py  db.py  health.py  logging.py  redis.py
src/ai_gateway/providers/: __init__.py  base.py  factory.py  mock.py  openai_compat.py
src/ai_gateway/queue/: __init__.py  celery_app.py  tasks.py
src/ai_gateway/services/: __init__.py  budgets.py  errors.py  limits.py  pricing.py  redaction.py  webhooks.py
src/ai_gateway/templates/: dashboard.html
tests/: test_apikey_parsing.py  test_errors.py  test_health.py  test_redaction.py  test_webhooks.py
