[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI integrations gateway: proxy, async jobs, webhooks, limits, audit, cost tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "structlog>=24.0",
  "celery>=5.4",
  "jinja2>=3.1",
  "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "fakeredis>=2.23",
  "ruff>=0.6",
  "types-redis>=4.6.0.20241004",
]

[project.scripts]
ai-gateway = "ai_gateway.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/ai_gateway/api/*.py" = ["B008"]
"src/ai_gateway/queue/*.py" = ["B904"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_gateway = ["data/*.json"]
